--- a/app/assets/stylesheets/names.css.scss
+++ b/app/assets/stylesheets/names.css.scss
@@ -1,3 +1,38 @@
 // Place all the styles related to the names controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+    body {
+        font: 12px sans-serif;
+    }
+
+    .axis path,
+    .axis line {
+        fill: none;
+        stroke: #000;
+        shape-rendering: crispEdges;
+    }
+
+    .x.axis path {
+        display: none;
+    }
+
+    .line {
+        fill: none;
+        stroke: steelblue;
+        stroke-width: 1.5px;
+    }
+
+    .s{
+        fill:red;
+        fill-opacity: .6;
+    }
+
+    .p{
+        fill:blue;
+        fill-opacity: .6;
+    }
+
+    .d{
+        fill:green;
+        fill-opacity: .6;
+    }
