--- a/app/assets/stylesheets/names.css.scss
+++ b/app/assets/stylesheets/names.css.scss
@@ -1,3 +1,51 @@
 // Place all the styles related to the names controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+    body {
+        font: 12px sans-serif;
+    }
+    .axis path,
+    .axis line {
+        fill: none;
+        stroke: #000;
+        shape-rendering: crispEdges;
+    }
+
+    .line {
+        fill: none;
+        stroke: steelblue;
+        stroke-width: 1.5px;
+    }
+    .s{
+        fill:red;
+        fill-opacity: .6;
+        clip-path: url(#clip);
+    }
+    .p{
+        fill:blue;
+        fill-opacity: .6;
+        clip-path: url(#clip);
+    }
+    .d{
+        fill:green;
+        fill-opacity: .6;
+        clip-path: url(#clip);
+    }
+
+    svg {
+      font: 14px sans-serif;
+    }
+
+    .axis path,
+    .axis line {
+      fill: none;
+      stroke: #000;
+      stroke-width: 1.5px;
+      shape-rendering: crispEdges;
+    }
+
+    .brush .extent {
+      stroke: #fff;
+      fill-opacity: .125;
+      shape-rendering: crispEdges;
+    }
