--- a/app/views/names/show.html.erb
+++ b/app/views/names/show.html.erb
@@ -1,55 +1,3 @@
-
-<style>
-    body {
-        font: 12px sans-serif;
-    }
-    .axis path,
-    .axis line {
-        fill: none;
-        stroke: #000;
-        shape-rendering: crispEdges;
-    }
-
-    .line {
-        fill: none;
-        stroke: steelblue;
-        stroke-width: 1.5px;
-    }
-    .s{
-        fill:red;
-        fill-opacity: .6;
-        clip-path: url(#clip);
-    }
-    .p{
-        fill:blue;
-        fill-opacity: .6;
-        clip-path: url(#clip);
-    }
-    .d{
-        fill:green;
-        fill-opacity: .6;
-        clip-path: url(#clip);
-    }
-
-    svg {
-      font: 14px sans-serif;
-    }
-
-    .axis path,
-    .axis line {
-      fill: none;
-      stroke: #000;
-      stroke-width: 1.5px;
-      shape-rendering: crispEdges;
-    }
-
-    .brush .extent {
-      stroke: #fff;
-      fill-opacity: .125;
-      shape-rendering: crispEdges;
-    }
-</style>
-
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -103,82 +51,71 @@ Select/Deselect All <input type="checkbox" id="selectall" checked/>
 <br>
 <br>
 
-
-<script type="text/javascript">
-    function replot(results) {
-      y.domain([0, document.getElementById('yMaxInput').value]);
-      y2.domain(y.domain());
-
-      focus.selectAll(".area").data(results)
-          .attr("id", function(d){ return d[0].orbital;})
-          .attr("class", function(d){
-                var t = parseInt(d[0].orbital.substring(2,3));
-                switch (t){
-                    case 0:
-                        return "area orb class s";
-                    case 1:
-                        return "area orb class p";
-                    case 2:
-                        return "area orb class d";
-                    }
-                })
-          .attr("d", area);
-
-      focus.call(yAxis)
-          .append("g")
-          .attr("class", "y axis")
-          .call(yAxis);
-
-      context.selectAll(".area").data(results)
-          .attr("id", function(d){ return d[0].orbital; })
-          .attr("class", function(d){
-                    var t = parseInt(d[0].orbital.substring(2,3));
-                    switch (t){
-                        case 0:
-                            return "area orb class s";
-                        case 1:
-                            return "area orb class p";
-                        case 2:
-                            return "area orb class d";
-                    }
-                })
-          .attr("d", area2);
-
-      context.call(yAxis2)
-          .append("g")
-          .selectAll("rect")
-          .attr("y", -6)
-          .attr("height", height2 + 7);
-    }
-
-    function changeAxis(val) {
-       
-        replot(results);
-    }
-
-    function updateTextInput(val) {
-      if (val < 0.1) {
-        val = 0.1;
-      }
-      document.getElementById('yMaxInput').value=val;
-      replot(results); 
-    }
-
-    function updateRangeInput(val) {
-      if (val < 0.1) {
-        val = 0.1;
-      }
-      document.getElementById('yMaxRange').value=val;
-      replot(results); 
-    }
-</script>
-
 Y Max: 
 <input type="text" id="yMaxInput" value="10" min=".1" max="50" onchange="updateRangeInput(this.value)">
 <input type="range" name="rangeInput" id="yMaxRange" min="0" max="50" value="10" onchange="updateTextInput(this.value);">                                                       
 <br>
 
+<div id="chart"></div>
+
+
+
+
+
+
 <script type="text/javascript">
+    var replot, updateRangeInput, updateTextInput;
+
+    replot = function(results) {
+      y.domain([0, document.getElementById("yMaxInput").value]);
+      y2.domain(y.domain());
+      focus.selectAll(".area").data(results).attr("id", function(d) {
+        return d[0].orbital;
+      }).attr("class", function(d) {
+        var t;
+        t = parseInt(d[0].orbital.substring(2, 3));
+        switch (t) {
+          case 0:
+            return "area orb class s";
+          case 1:
+            return "area orb class p";
+          case 2:
+            return "area orb class d";
+        }
+      }).attr("d", area);
+      focus.call(yAxis).append("g").attr("class", "y axis").call(yAxis);
+      context.selectAll(".area").data(results).attr("id", function(d) {
+        return d[0].orbital;
+      }).attr("class", function(d) {
+        var t;
+        t = parseInt(d[0].orbital.substring(2, 3));
+        switch (t) {
+          case 0:
+            return "area orb class s";
+          case 1:
+            return "area orb class p";
+          case 2:
+            return "area orb class d";
+        }
+      }).attr("d", area2);
+    };
+
+    updateTextInput = function(val) {
+      if (val < 0.1) {
+        val = 0.1;
+      }
+      document.getElementById("yMaxInput").value = val;
+      replot(results);
+    };
+
+    updateRangeInput = function(val) {
+      if (val < 0.1) {
+        val = 0.1;
+      }
+      document.getElementById("yMaxRange").value = val;
+      replot(results);
+    };      
+
     var results =[];
     <% @name.states.order('id ASC').each_with_index do |state, i| %>
 
@@ -228,7 +165,7 @@ Y Max:
         .x(x2)
         .on("brush", brushed);
 
-    var svg = d3.select("body")
+    var svg = d3.select("#chart")
         .append("svg:svg")
         .attr("width", width + margin.left + margin.right)
         .attr("height", height + margin.top + margin.bottom);
@@ -247,7 +184,7 @@ Y Max:
 
     svg.append("defs").append("clipPath")
         .attr("id", "clip")
-      .append("rect")
+        .append("rect")
         .attr("width", width)
         .attr("height", height);
 
@@ -269,14 +206,14 @@ Y Max:
           .append("path")
           .attr("id", function(d){ return d[0].orbital;})
           .attr("class", function(d){
-                var t = parseInt(d[0].orbital.substring(2,3));
-                switch (t){
-                    case 0:
-                        return "area orb class s";
-                    case 1:
-                        return "area orb class p";
-                    case 2:
-                        return "area orb class d";
+                    var t = parseInt(d[0].orbital.substring(2,3));
+                    switch (t){
+                        case 0:
+                            return "area orb class s";
+                        case 1:
+                            return "area orb class p";
+                        case 2:
+                            return "area orb class d";
                     }
                 })
           .attr("d", area);
@@ -319,7 +256,6 @@ Y Max:
           .attr("height", height2 + 7);
     }
     
-
     dosPlot(results);
 
     function brushed() {
@@ -328,11 +264,7 @@ Y Max:
       focus.select(".x.axis").call(xAxis);
     }
 
-</script>
-
-<script type="text/javascript">
-
-    <% @name.states.order('id ASC').each_with_index do |state, i| %>
+     <% @name.states.order('id ASC').each_with_index do |state, i| %>
         <% identifier = "id" + state.orbital_subset.to_s + state.atom_subset[0].to_s %>
         d3.selectAll("input[value=<%=identifier %>]").on("change", function(){
             <% identifier = "#"+identifier %>
@@ -340,7 +272,6 @@ Y Max:
             .style("display", this.checked ? null : "none");
         });
     <% end %>
-
 
     $(document).ready(function() {
         $('#selectall').click(function(event) {  //on click 
@@ -358,7 +289,7 @@ Y Max:
                 }); 
                 svg.selectAll(".orb").style("display", "none");        
             }
-        });      
+        });
     });
 
 </script>
